<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".View.GasEtaActivity">

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/nome_app"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivBomba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bomba"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etGasolina"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/gasolina"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etEtanol"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/etanol"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/resultado"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/limpar"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:enabled="false"
        android:text="@string/salvar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/finalizar"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />

</androidx.appcompat.widget.LinearLayoutCompat>